# serializer version: 1
# name: test_most_recent_day_sensor
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data scraped from WaterSmart',
      'device_class': 'water',
      'friendly_name': 'WaterSmart (test) Gallons for most recent full day',
      'related': list([
        dict({
          'gallons': 7.48,
          'start': '2024-06-19T12:00:00-07:00',
        }),
        dict({
          'gallons': 0,
          'start': '2024-06-19T13:00:00-07:00',
        }),
        dict({
          'gallons': 7.48,
          'start': '2024-06-19T14:00:00-07:00',
        }),
        dict({
          'gallons': 0,
          'start': '2024-06-19T15:00:00-07:00',
        }),
        dict({
          'gallons': 0.0,
          'start': '2024-06-19T16:00:00-07:00',
        }),
        dict({
          'gallons': 1.0,
          'start': '2024-06-19T17:00:00-07:00',
        }),
        dict({
          'gallons': 2.0,
          'start': '2024-06-19T18:00:00-07:00',
        }),
        dict({
          'gallons': 3.0,
          'start': '2024-06-19T19:00:00-07:00',
        }),
        dict({
          'gallons': 4.0,
          'start': '2024-06-19T20:00:00-07:00',
        }),
        dict({
          'gallons': 5.0,
          'start': '2024-06-19T21:00:00-07:00',
        }),
        dict({
          'gallons': 6.0,
          'start': '2024-06-19T22:00:00-07:00',
        }),
        dict({
          'gallons': 7.0,
          'start': '2024-06-19T23:00:00-07:00',
        }),
      ]),
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.watersmart_test_gallons_for_most_recent_full_day',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '162.62129024064',
  })
# ---
# name: test_most_recent_hour_sensor
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data scraped from WaterSmart',
      'device_class': 'water',
      'friendly_name': 'WaterSmart (test) Gallons for most recent hour',
      'related': list([
        dict({
          'gallons': 7.48,
          'start': '2024-06-19T12:00:00-07:00',
        }),
        dict({
          'gallons': 0,
          'start': '2024-06-19T13:00:00-07:00',
        }),
        dict({
          'gallons': 7.48,
          'start': '2024-06-19T14:00:00-07:00',
        }),
        dict({
          'gallons': 14.3,
          'start': '2024-06-19T15:00:00-07:00',
        }),
      ]),
      'start': '2024-06-19T15:00:00-07:00',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.watersmart_test_gallons_for_most_recent_hour',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '54.1313885112',
  })
# ---
# name: test_most_recent_hour_sensor_with_none_in_data
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data scraped from WaterSmart',
      'device_class': 'water',
      'friendly_name': 'WaterSmart (test) Gallons for most recent full day',
      'related': list([
        dict({
          'gallons': 7.48,
          'start': '2024-06-19T12:00:00-07:00',
        }),
        dict({
          'gallons': 0,
          'start': '2024-06-19T13:00:00-07:00',
        }),
        dict({
          'gallons': 7.48,
          'start': '2024-06-19T14:00:00-07:00',
        }),
        dict({
          'gallons': 0,
          'start': '2024-06-19T15:00:00-07:00',
        }),
        dict({
          'gallons': 0.0,
          'start': '2024-06-19T16:00:00-07:00',
        }),
        dict({
          'gallons': 1.0,
          'start': '2024-06-19T17:00:00-07:00',
        }),
        dict({
          'gallons': 2.0,
          'start': '2024-06-19T18:00:00-07:00',
        }),
        dict({
          'gallons': 3.0,
          'start': '2024-06-19T19:00:00-07:00',
        }),
        dict({
          'gallons': 4.0,
          'start': '2024-06-19T20:00:00-07:00',
        }),
        dict({
          'gallons': 5.0,
          'start': '2024-06-19T21:00:00-07:00',
        }),
        dict({
          'gallons': 6.0,
          'start': '2024-06-19T22:00:00-07:00',
        }),
        dict({
          'gallons': 7.0,
          'start': '2024-06-19T23:00:00-07:00',
        }),
      ]),
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.watersmart_test_gallons_for_most_recent_full_day',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '162.62129024064',
  })
# ---
# name: test_sensors_for_zero_gallons
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data scraped from WaterSmart',
      'device_class': 'water',
      'friendly_name': 'WaterSmart (test) Gallons for most recent full day',
      'related': list([
      ]),
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.watersmart_test_gallons_for_most_recent_full_day',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors_for_zero_gallons.1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data scraped from WaterSmart',
      'device_class': 'water',
      'friendly_name': 'WaterSmart (test) Gallons for most recent hour',
      'related': list([
        dict({
          'gallons': 7.48,
          'start': '2024-06-19T12:00:00-07:00',
        }),
        dict({
          'gallons': 0,
          'start': '2024-06-19T13:00:00-07:00',
        }),
        dict({
          'gallons': 7.48,
          'start': '2024-06-19T14:00:00-07:00',
        }),
        dict({
          'gallons': 0,
          'start': '2024-06-19T15:00:00-07:00',
        }),
      ]),
      'start': '2024-06-19T15:00:00-07:00',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.watersmart_test_gallons_for_most_recent_hour',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
